WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253985
REGRESSION (
261253@main
): Editing GitHub comment quickly can cause flickering text/switching spellcheck suggestions and empty spaces
https://bugs.webkit.org/show_bug.cgi?id=253985
Summary
REGRESSION (261253@main): Editing GitHub comment quickly can cause flickering...
zalan
Reported
2023-03-15 14:41:19 PDT
<
rdar://106708219
>
Attachments
Patch
(3.36 KB, patch)
2023-03-15 15:48 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(8.47 KB, patch)
2023-03-15 17:10 PDT
,
zalan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(8.73 KB, patch)
2023-03-15 18:53 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Patch
(9.57 KB, patch)
2023-03-15 19:15 PDT
,
zalan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
zalan
Comment 1
2023-03-15 15:48:06 PDT
Created
attachment 465451
[details]
Patch
zalan
Comment 2
2023-03-15 17:10:53 PDT
Created
attachment 465453
[details]
Patch
zalan
Comment 3
2023-03-15 18:53:29 PDT
Created
attachment 465454
[details]
Patch
zalan
Comment 4
2023-03-15 19:15:36 PDT
Created
attachment 465455
[details]
Patch
EWS
Comment 5
2023-03-16 06:45:51 PDT
Committed
261743@main
(3fabfea068b8): <
https://commits.webkit.org/261743@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 465455
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug